--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>T.C. Anayasası Konu Anlatımı - Adalet GYS Portalı</title>
     <meta name="description" content="Adalet Bakanlığı Görevde Yükselme Sınavı (GYS) için T.C. Anayasası ders notları. Genel Esaslar, Temel Haklar ve Devletin Organları konularını kapsayan profesyonel ve sınav odaklı konu anlatımı.">
 
@@ -63,22 +62,23 @@
                 <section aria-labelledby="bolum1-4">
                     <h3 id="bolum1-4">Madde 1-4: Devletin "Çekirdek Ailesi" - Değiştirilemez Hükümler</h3>
                     
-                    <details id="madde-1" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 1 - Devletin Şekli</summary>
                         <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Türkiye Devleti bir Cumhuriyettir."</p></blockquote>
+                            <blockquote><p>Türkiye Devleti bir Cumhuriyettir.</p></blockquote>
+                            <p><strong>Strateji:</strong> En kısa ama en temel maddedir. Sınavda diğer değiştirilemez maddelerle birlikte sorulur.</p>
                         </div>
                     </details>
 
-                    <details id="madde-2" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 2 - Cumhuriyetin Nitelikleri</summary>
                         <div class="mt-3 border-t pt-3">
                             <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4 rounded-md">
                                 <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır.</p>
                             </div>
-                            <blockquote><p>"Türkiye Cumhuriyeti, toplumun huzuru, milli dayanışma ve adalet anlayışı içinde, insan haklarına saygılı, Atatürk milliyetçiliğine bağlı, başlangıçta belirtilen temel ilkelere dayanan, <strong>demokratik, laik ve sosyal bir hukuk Devletidir.</strong>"</p></blockquote>
+                            <blockquote><p>"Türkiye Cumhuriyeti ... <strong>demokratik, laik ve sosyal bir hukuk Devletidir.</strong>"</p></blockquote>
                             <div class="uyari-kutusu my-4">
-                                <p><strong>🧠 Hafıza Tekniği (Kodlama):</strong> Madde 2'deki temel nitelikleri unutmamak için şu kodlamayı kullanabilirsiniz: <strong>"İLAHİ D-S"</strong></p>
+                                <p><strong>🧠 Hafıza Tekniği:</strong> "İLAHİ D-S" ile kodlayın:</p>
                                 <ul class="list-none mt-2 space-y-1 font-mono">
                                     <li><strong>İ</strong>nsan haklarına saygılı</li><li><strong>L</strong>aik</li><li><strong>A</strong>tatürk milliyetçiliğine bağlı</li><li><strong>H</strong>ukuk devleti</li><li><strong>İ</strong>lkelere (Başlangıç) dayanan</li><li><strong>D</strong>emokratik</li><li><strong>S</strong>osyal</li>
                                 </ul>
@@ -86,18 +86,21 @@
                         </div>
                     </details>
 
-                    <details id="madde-3" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 3 - Devletin Bütünlüğü ve Sembolleri</summary>
                         <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Türkiye Devleti, ülkesi ve milletiyle bölünmez bir bütündür. Dili Türkçedir. Bayrağı, şekli kanununda belirtilen, beyaz ay yıldızlı al bayraktır. Milli marşı 'İstiklal Marşı'dır. Başkenti Ankara'dır."</p></blockquote>
+                            <blockquote><p>"Türkiye Devleti, ülkesi ve milletiyle bölünmez bir bütündür. Dili Türkçedir. Bayrağı... beyaz ay yıldızlı al bayraktır. Milli marşı “İstiklal Marşı”dır. Başkenti Ankara’dır."</p></blockquote>
+                            <p><strong>Not:</strong> Resmî dil, başkent, bayrak ve marş bu maddede geçer. Ezberlenmesi önemlidir.</p>
                         </div>
                     </details>
 
-                    <details id="madde-4" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 4 - Değiştirilemez Hükümler</summary>
                         <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Anayasanın 1 inci maddesindeki Devletin şeklinin Cumhuriyet olduğu hakkındaki hüküm ile, 2 nci maddesindeki Cumhuriyetin nitelikleri ve 3 üncü maddesi hükümleri değiştirilemez ve değiştirilmesi teklif edilemez."</p></blockquote>
-                            <p><strong>Hoca Yorumu:</strong> Anahtar ifade: <strong>"teklif dahi edilemez."</strong></p>
+                             <blockquote><p>"...değiştirilemez ve değiştirilmesi teklif edilemez."</p></blockquote>
+                             <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4 rounded-md">
+                                 <p>❗ <strong>Sınav Stratejisi:</strong> "Teklif dahi edilemez" ifadesi, bu maddenin en ayırt edici özelliğidir ve sınavlarda doğrudan sorulur.</p>
+                             </div>
                         </div>
                     </details>
                 </section>
@@ -105,76 +108,52 @@
                 <section aria-labelledby="bolum5-11">
                     <h3 id="bolum5-11">Madde 5-11: Devletin "Görev Tanımı" ve Temel İlkeler</h3>
 
-                     <details id="madde-5" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                     <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 5 - Devletin Temel Amaç ve Görevleri</summary>
                         <div class="mt-3 border-t pt-3">
                             <blockquote><p>"Devletin temel amaç ve görevleri... korumak... sağlamak... kaldırmaya... hazırlamaya çalışmaktır."</p></blockquote>
                             <div class="uyari-kutusu mt-3">
-                                <p><strong>🧠 Hafıza Tekniği (Fiil Kökleri):</strong> Bu uzun maddeyi ezberlemek yerine anahtar fiilleri aklınızda tutun: <strong>KORUMAK, SAĞLAMAK, KALDIRMAK, HAZIRLAMAK.</strong></p>
+                                <p><strong>🧠 Hafıza Kökü:</strong> Bu maddenin anahtar fiillerini aklınızda tutun: <strong>KORUMAK, SAĞLAMAK, KALDIRMAK, HAZIRLAMAK.</strong></p>
                             </div>
                         </div>
                     </details>
 
-                    <details id="madde-6" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 6 - Egemenlik</summary>
                         <div class="mt-3 border-t pt-3">
                             <blockquote><p>"Egemenlik, kayıtsız şartsız Milletindir..."</p></blockquote>
-                            <p><strong>Hoca Yorumu:</strong> Bu madde, kuvvetler ayrılığı ilkesinin (Madde 7-8-9) anayasal dayanağıdır.</p>
-                        </div>
-                    </details>
-
-                    <details id="madde-7" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
-                        <summary class="font-semibold text-lg cursor-pointer">📘 Madde 7 - Yasama Yetkisi</summary>
-                        <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Yasama yetkisi Türk Milleti adına Türkiye Büyük Millet Meclisinindir. Bu yetki devredilemez."</p></blockquote>
-                            <p><strong>Hoca Yorumu:</strong> İki anahtar kelime: Yetki **Türk Milleti adına** kullanılır ve **devredilemez**.</p>
-                        </div>
-                    </details>
-
-                    <details id="madde-8" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
-                        <summary class="font-semibold text-lg cursor-pointer">📘 Madde 8 - Yürütme Yetkisi ve Görevi</summary>
-                        <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Yürütme yetkisi ve görevi, Cumhurbaşkanı tarafından, Anayasaya ve kanunlara uygun olarak kullanılır ve yerine getirilir."</p></blockquote>
-                        </div>
-                    </details>
-
-                    <details id="madde-9" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
-                        <summary class="font-semibold text-lg cursor-pointer">📘 Madde 9 - Yargı Yetkisi</summary>
-                        <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Yargı yetkisi, Türk Milleti adına bağımsız ve tarafsız mahkemelerce kullanılır."</p></blockquote>
-                             <p><strong>Hoca Yorumu:</strong> Yargının iki temel direği: **Bağımsızlık** ve **Tarafsızlık**.</p>
+                            <p><strong>Anahtar:</strong> "Kaynağını Anayasadan almayan" bir devlet yetkisi kullanılamaz ilkesi, hukuk devletinin temelidir.</p>
                         </div>
                     </details>
 
                     <div id="kuvvetler-ayriligi" class="my-6">
                         <h4 class="text-center font-bold text-lg mb-4">📊 Kavram Haritası: Kuvvetler Ayrılığı</h4>
                         <div class="flex flex-col md:flex-row gap-4 text-center">
-                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-md"><h5 class="font-bold text-blue-800">YASAMA</h5><hr class="my-2"><p><strong>Organ:</strong> T.B.M.M.</p><p><strong>Görev:</strong> Kanun Yapmak</p></div>
-                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-md"><h5 class="font-bold text-red-800">YÜRÜTME</h5><hr class="my-2"><p><strong>Organ:</strong> Cumhurbaşkanı</p><p><strong>Görev:</strong> Uygulamak</p></div>
-                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-md"><h5 class="font-bold text-green-800">YARGI</h5><hr class="my-2"><p><strong>Organ:</strong> Bağımsız ve Tarafsız Mahkemeler</p><p><strong>Görev:</strong> Yargılamak</p></div>
+                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-md"><h5 class="font-bold text-blue-800">YASAMA (Madde 7)</h5><hr class="my-2"><p><strong>Organ:</strong> T.B.M.M.</p><p><strong>Anahtar:</strong> Devredilemez.</p></div>
+                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-md"><h5 class="font-bold text-red-800">YÜRÜTME (Madde 8)</h5><hr class="my-2"><p><strong>Organ:</strong> Cumhurbaşkanı</p><p><strong>Anahtar:</strong> Anayasaya uygun.</p></div>
+                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-md"><h5 class="font-bold text-green-800">YARGI (Madde 9)</h5><hr class="my-2"><p><strong>Organ:</strong> Bağımsız ve Tarafsız Mahkemeler</p><p><strong>Anahtar:</strong> Bağımsız ve Tarafsız.</p></div>
                         </div>
                     </div>
 
-                    <details id="madde-10" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 10 - Eşitlik İlkesi</summary>
                         <div class="mt-3 border-t pt-3">
-                             <blockquote><p>"Herkes, dil, ırk, renk, cinsiyet, siyasi düşünce... ayırım gözetilmeksizin kanun önünde eşittir."</p></blockquote>
+                             <blockquote><p>"Herkes, dil, ırk, renk, cinsiyet... ayırım gözetilmeksizin kanun önünde eşittir."</p></blockquote>
                             <div class="uyari-kutusu mt-3">
-                                <p><strong>💡 Anlamlandırma Kutusu: Pozitif Ayrımcılık</strong><br>
-                                Bu madde, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir.</p>
+                                <p><strong>💡 Püf Nokta:</strong> "Pozitif ayrımcılık" (çocuklar, yaşlılar, engelliler vb. için alınan tedbirler) bu madde kapsamında değerlendirilir ve eşitlik ilkesine aykırı sayılmaz.</p>
                             </div>
                         </div>
                     </details>
 
-                    <details id="madde-11" class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 11 - Anayasanın Üstünlüğü</summary>
                         <div class="mt-3 border-t pt-3">
-                             <blockquote><p>"Anayasa hükümleri... bağlayan temel hukuk kurallarıdır. Kanunlar Anayasaya aykırı olamaz."</p></blockquote>
+                             <blockquote><p>"...Kanunlar Anayasaya aykırı olamaz."</p></blockquote>
                              <div class="ozet-kutusu mt-4">
                                 <h5 class="font-bold mb-2">📊 Kavram Haritası: Normlar Hiyerarşisi</h5>
                                 <ol class="list-decimal list-inside text-center space-y-2">
-                                    <li class="font-bold text-lg">Anayasa</li>
-                                    <li class="font-medium">Kanun / Milletlerarası Antlaşmalar</li>
+                                    <li class="font-bold text-lg">Anayasa (En üstün)</li>
+                                    <li class="font-medium">Kanun</li>
                                     <li>Cumhurbaşkanlığı Kararnamesi</li>
                                     <li class="text-sm">Yönetmelik</li>
                                 </ol>
@@ -188,16 +167,16 @@
                             Hızlı Tekrar Testi
                         </h3>
                         <div class="space-y-4 text-sky-800">
-                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>1. Boşluk Doldurma:</strong> Yargı yetkisi, Türk Milleti adına ................. ve tarafsız mahkemelerce kullanılır.</div>
-                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>2. Doğru/Yanlış:</strong> Anayasanın 3. maddesi değiştirilebilir ancak değiştirilmesi teklif edilemez. (D/Y)</div>
-                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>3. Bilgi Sorusu:</strong> Devletin temel amaç ve görevlerini özetleyen 4 anahtar fiil nedir?</div>
-                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>4. Kavram:</strong> Kanunların Anayasa'ya aykırı olamaması ilkesine ne ad verilir?</div>
+                            <p><strong>1. Boşluk Doldurma:</strong> Türkiye Devleti bir ...................... .</p>
+                            <p><strong>2. Doğru/Yanlış:</strong> Anayasanın ilk üç maddesinin değiştirilmesi teklif edilebilir. (D/Y)</p>
+                            <p><strong>3. Bilgi Sorusu:</strong> Devletin temel amaç ve görevlerini özetleyen 4 anahtar fiil nedir?</p>
+                            <p><strong>4. Kavram:</strong> Kanunların Anayasa'ya aykırı olamaması ilkesine ne ad verilir?</p>
                         </div>
                         <details class="mt-4">
                             <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
                             <div class="mt-2 p-3 bg-white rounded-md border text-sm space-y-1">
-                                <p><strong>1. Cevap:</strong> bağımsız</p>
-                                <p><strong>2. Cevap:</strong> Yanlış (Değiştirilemez ve değiştirilmesi teklif dahi edilemez)</p>
+                                <p><strong>1. Cevap:</strong> Cumhuriyettir</p>
+                                <p><strong>2. Cevap:</strong> Yanlış (Teklif dahi edilemez)</p>
                                 <p><strong>3. Cevap:</strong> Korumak, Sağlamak, Kaldırmak, Hazırlamak</p>
                                 <p><strong>4. Cevap:</strong> Anayasanın Üstünlüğü (Normlar Hiyerarşisi)</p>
                             </div>
@@ -215,7 +194,6 @@
                       </ul>
                     </div>
                 </section>
-
             </article>
         </div>
     </main>
