--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -65,8 +65,7 @@
                     <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 1 - Devletin Şekli</summary>
                         <div class="mt-3 border-t pt-3">
-                            <blockquote><p>Türkiye Devleti bir Cumhuriyettir.</p></blockquote>
-                            <p><strong>Strateji:</strong> En kısa ama en temel maddedir. Sınavda diğer değiştirilemez maddelerle birlikte sorulur.</p>
+                            <blockquote><p>Türkiye Devleti bir <strong>Cumhuriyettir</strong>.</p></blockquote>
                         </div>
                     </details>
 
@@ -76,9 +75,9 @@
                             <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4 rounded-md">
                                 <p>❗ <strong>Sınav Stratejisi:</strong> Cumhuriyetin nitelikleri, Anayasa konusunun en sık soru gelen alanıdır.</p>
                             </div>
-                            <blockquote><p>"Türkiye Cumhuriyeti ... <strong>demokratik, laik ve sosyal bir hukuk Devletidir.</strong>"</p></blockquote>
+                            <blockquote><p>Türkiye Cumhuriyeti, toplumun huzuru, milli dayanışma ve adalet anlayışı içinde, insan haklarına saygılı, Atatürk milliyetçiliğine bağlı, başlangıçta belirtilen temel ilkelere dayanan, <strong>demokratik, laik ve sosyal bir hukuk Devletidir.</strong></p></blockquote>
                             <div class="uyari-kutusu my-4">
-                                <p><strong>🧠 Hafıza Tekniği:</strong> "İLAHİ D-S" ile kodlayın:</p>
+                                <p><strong>🧠 Hafıza Tekniği (Kodlama):</strong> Madde 2'deki temel nitelikleri unutmamak için şu kodlamayı kullanabilirsiniz: <strong>"İLAHİ D-S"</strong></p>
                                 <ul class="list-none mt-2 space-y-1 font-mono">
                                     <li><strong>İ</strong>nsan haklarına saygılı</li><li><strong>L</strong>aik</li><li><strong>A</strong>tatürk milliyetçiliğine bağlı</li><li><strong>H</strong>ukuk devleti</li><li><strong>İ</strong>lkelere (Başlangıç) dayanan</li><li><strong>D</strong>emokratik</li><li><strong>S</strong>osyal</li>
                                 </ul>
@@ -89,18 +88,14 @@
                     <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 3 - Devletin Bütünlüğü ve Sembolleri</summary>
                         <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Türkiye Devleti, ülkesi ve milletiyle bölünmez bir bütündür. Dili Türkçedir. Bayrağı... beyaz ay yıldızlı al bayraktır. Milli marşı “İstiklal Marşı”dır. Başkenti Ankara’dır."</p></blockquote>
-                            <p><strong>Not:</strong> Resmî dil, başkent, bayrak ve marş bu maddede geçer. Ezberlenmesi önemlidir.</p>
+                            <blockquote><p>Türkiye Devleti, ülkesi ve milletiyle <strong>bölünmez bir bütündür</strong>. Dili <strong>Türkçedir</strong>. Bayrağı, şekli kanununda belirtilen, beyaz ay yıldızlı <strong>al bayraktır</strong>. Milli marşı “<strong>İstiklal Marşı</strong>”dır. Başkenti <strong>Ankara</strong>’dır.</p></blockquote>
                         </div>
                     </details>
 
                     <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 4 - Değiştirilemez Hükümler</summary>
                         <div class="mt-3 border-t pt-3">
-                             <blockquote><p>"...değiştirilemez ve değiştirilmesi teklif edilemez."</p></blockquote>
-                             <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 my-4 rounded-md">
-                                 <p>❗ <strong>Sınav Stratejisi:</strong> "Teklif dahi edilemez" ifadesi, bu maddenin en ayırt edici özelliğidir ve sınavlarda doğrudan sorulur.</p>
-                             </div>
+                             <blockquote><p>Anayasanın 1 inci maddesindeki Devletin şeklinin Cumhuriyet olduğu hakkındaki hüküm ile, 2 nci maddesindeki Cumhuriyetin nitelikleri ve 3 üncü maddesi hükümleri <strong>değiştirilemez ve değiştirilmesi teklif edilemez.</strong></p></blockquote>
                         </div>
                     </details>
                 </section>
@@ -111,9 +106,9 @@
                      <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 5 - Devletin Temel Amaç ve Görevleri</summary>
                         <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Devletin temel amaç ve görevleri... korumak... sağlamak... kaldırmaya... hazırlamaya çalışmaktır."</p></blockquote>
+                            <blockquote><p>Devletin temel amaç ve görevleri, Türk milletinin bağımsızlığını ve bütünlüğünü... <strong>korumak</strong>, kişilerin ve toplumun refah, huzur ve mutluluğunu <strong>sağlamak</strong>... engelleri <strong>kaldırmaya</strong>, insanın maddi ve manevi varlığının gelişmesi için gerekli şartları <strong>hazırlamaya çalışmaktır</strong>.</p></blockquote>
                             <div class="uyari-kutusu mt-3">
-                                <p><strong>🧠 Hafıza Kökü:</strong> Bu maddenin anahtar fiillerini aklınızda tutun: <strong>KORUMAK, SAĞLAMAK, KALDIRMAK, HAZIRLAMAK.</strong></p>
+                                <p><strong>🧠 Hafıza Tekniği (Fiil Kökleri):</strong> Bu uzun maddeyi ezberlemek yerine anahtar fiilleri aklınızda tutun: <strong>KORUMAK, SAĞLAMAK, KALDIRMAK, HAZIRLAMAK.</strong></p>
                             </div>
                         </div>
                     </details>
@@ -121,26 +116,47 @@
                     <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 6 - Egemenlik</summary>
                         <div class="mt-3 border-t pt-3">
-                            <blockquote><p>"Egemenlik, kayıtsız şartsız Milletindir..."</p></blockquote>
-                            <p><strong>Anahtar:</strong> "Kaynağını Anayasadan almayan" bir devlet yetkisi kullanılamaz ilkesi, hukuk devletinin temelidir.</p>
+                            <blockquote><p>Egemenlik, <strong>kayıtsız şartsız Milletindir.</strong> Türk Milleti, egemenliğini, Anayasanın koyduğu esaslara göre, <strong>yetkili organları eliyle kullanır.</strong> ...Hiçbir kimse veya organ <strong>kaynağını Anayasadan almayan</strong> bir Devlet yetkisi kullanamaz.</p></blockquote>
+                        </div>
+                    </details>
+                    
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                        <summary class="font-semibold text-lg cursor-pointer">📘 Madde 7 - Yasama Yetkisi</summary>
+                        <div class="mt-3 border-t pt-3">
+                            <blockquote><p>Yasama yetkisi Türk Milleti adına <strong>Türkiye Büyük Millet Meclisinindir.</strong> Bu yetki <strong>devredilemez.</strong></p></blockquote>
+                        </div>
+                    </details>
+
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                        <summary class="font-semibold text-lg cursor-pointer">📘 Madde 8 - Yürütme Yetkisi ve Görevi</summary>
+                        <div class="mt-3 border-t pt-3">
+                            <blockquote><p>Yürütme yetkisi ve görevi, <strong>Cumhurbaşkanı tarafından, Anayasaya ve kanunlara uygun olarak</strong> kullanılır ve yerine getirilir.</p></blockquote>
+                        </div>
+                    </details>
+
+                    <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
+                        <summary class="font-semibold text-lg cursor-pointer">📘 Madde 9 - Yargı Yetkisi</summary>
+                        <div class="mt-3 border-t pt-3">
+                            <blockquote><p>Yargı yetkisi, Türk Milleti adına <strong>bağımsız ve tarafsız mahkemelerce</strong> kullanılır.</p></blockquote>
                         </div>
                     </details>
 
                     <div id="kuvvetler-ayriligi" class="my-6">
                         <h4 class="text-center font-bold text-lg mb-4">📊 Kavram Haritası: Kuvvetler Ayrılığı</h4>
                         <div class="flex flex-col md:flex-row gap-4 text-center">
-                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-md"><h5 class="font-bold text-blue-800">YASAMA (Madde 7)</h5><hr class="my-2"><p><strong>Organ:</strong> T.B.M.M.</p><p><strong>Anahtar:</strong> Devredilemez.</p></div>
-                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-md"><h5 class="font-bold text-red-800">YÜRÜTME (Madde 8)</h5><hr class="my-2"><p><strong>Organ:</strong> Cumhurbaşkanı</p><p><strong>Anahtar:</strong> Anayasaya uygun.</p></div>
-                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-md"><h5 class="font-bold text-green-800">YARGI (Madde 9)</h5><hr class="my-2"><p><strong>Organ:</strong> Bağımsız ve Tarafsız Mahkemeler</p><p><strong>Anahtar:</strong> Bağımsız ve Tarafsız.</p></div>
+                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-md"><h5 class="font-bold text-blue-800">YASAMA</h5><hr class="my-2"><p><strong>Organ:</strong> T.B.M.M.</p><p><strong>Anahtar:</strong> Devredilemez.</p></div>
+                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-md"><h5 class="font-bold text-red-800">YÜRÜTME</h5><hr class="my-2"><p><strong>Organ:</strong> Cumhurbaşkanı</p><p><strong>Anahtar:</strong> Anayasaya uygun.</p></div>
+                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-md"><h5 class="font-bold text-green-800">YARGI</h5><hr class="my-2"><p><strong>Organ:</strong> Bağımsız ve Tarafsız Mahkemeler</p><p><strong>Anahtar:</strong> Bağımsız ve Tarafsız.</p></div>
                         </div>
                     </div>
 
                     <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 10 - Eşitlik İlkesi</summary>
                         <div class="mt-3 border-t pt-3">
-                             <blockquote><p>"Herkes, dil, ırk, renk, cinsiyet... ayırım gözetilmeksizin kanun önünde eşittir."</p></blockquote>
+                             <blockquote><p>Herkes, dil, ırk, renk, cinsiyet... ayırım gözetilmeksizin <strong>kanun önünde eşittir.</strong> ... Hiçbir kişiye, aileye, zümreye veya sınıfa <strong>imtiyaz tanınamaz.</strong></p></blockquote>
                             <div class="uyari-kutusu mt-3">
-                                <p><strong>💡 Püf Nokta:</strong> "Pozitif ayrımcılık" (çocuklar, yaşlılar, engelliler vb. için alınan tedbirler) bu madde kapsamında değerlendirilir ve eşitlik ilkesine aykırı sayılmaz.</p>
+                                <p><strong>💡 Anlamlandırma Kutusu: Pozitif Ayrımcılık</strong><br>
+                                Bu madde, dezavantajlı durumda olan <strong>çocuklar, yaşlılar, engelliler, şehit dul ve yetimleri ile gaziler</strong> için alınan ek tedbirlerin eşitlik ilkesine aykırı sayılamayacağını belirtir.</p>
                             </div>
                         </div>
                     </details>
@@ -148,12 +164,12 @@
                     <details class="my-4 p-4 border rounded-lg hover:bg-slate-50">
                         <summary class="font-semibold text-lg cursor-pointer">📘 Madde 11 - Anayasanın Üstünlüğü</summary>
                         <div class="mt-3 border-t pt-3">
-                             <blockquote><p>"...Kanunlar Anayasaya aykırı olamaz."</p></blockquote>
+                             <blockquote><p>Anayasa hükümleri... <strong>bağlayan temel hukuk kurallarıdır. Kanunlar Anayasaya aykırı olamaz.</strong></p></blockquote>
                              <div class="ozet-kutusu mt-4">
                                 <h5 class="font-bold mb-2">📊 Kavram Haritası: Normlar Hiyerarşisi</h5>
                                 <ol class="list-decimal list-inside text-center space-y-2">
                                     <li class="font-bold text-lg">Anayasa (En üstün)</li>
-                                    <li class="font-medium">Kanun</li>
+                                    <li class="font-medium">Kanun / Milletlerarası Antlaşmalar</li>
                                     <li>Cumhurbaşkanlığı Kararnamesi</li>
                                     <li class="text-sm">Yönetmelik</li>
                                 </ol>
@@ -167,10 +183,10 @@
                             Hızlı Tekrar Testi
                         </h3>
                         <div class="space-y-4 text-sky-800">
-                            <p><strong>1. Boşluk Doldurma:</strong> Türkiye Devleti bir ...................... .</p>
-                            <p><strong>2. Doğru/Yanlış:</strong> Anayasanın ilk üç maddesinin değiştirilmesi teklif edilebilir. (D/Y)</p>
-                            <p><strong>3. Bilgi Sorusu:</strong> Devletin temel amaç ve görevlerini özetleyen 4 anahtar fiil nedir?</p>
-                            <p><strong>4. Kavram:</strong> Kanunların Anayasa'ya aykırı olamaması ilkesine ne ad verilir?</p>
+                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>1. Boşluk Doldurma:</strong> Türkiye Devleti bir ...................... .</div>
+                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>2. Doğru/Yanlış:</strong> Anayasanın ilk üç maddesinin değiştirilmesi teklif edilebilir. (D/Y)</div>
+                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>3. Bilgi Sorusu:</strong> Devletin temel amaç ve görevlerini özetleyen 4 anahtar fiil nedir?</div>
+                            <div class="p-3 bg-white/60 rounded-md border border-sky-200"><strong>4. Kavram:</strong> Kanunların Anayasa'ya aykırı olamaması ilkesine ne ad verilir?</div>
                         </div>
                         <details class="mt-4">
                             <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
@@ -194,6 +210,7 @@
                       </ul>
                     </div>
                 </section>
+
             </article>
         </div>
     </main>
