--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -341,32 +341,53 @@
         </ul>
     </div>
 
-    <!-- HIZLI TEKRAR TESTİ -->
-    <div class="mt-8 p-6 bg-sky-50 border-t-4 border-sky-500 rounded-lg" role="region">
-        <h3 class="font-bold text-sky-900 text-xl mb-4 flex items-center">
-            <svg class="h-6 w-6 mr-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-            Hızlı Tekrar Testi
-        </h3>
-        <div class="space-y-4 text-sky-800">
-            <div class="p-3 bg-white/60 rounded-md border"><strong>1.</strong> "KORU-SAĞLA-KALDIR-HAZIRLA" hafıza tekniği hangi maddeye aittir?</div>
-            <div class="p-3 bg-white/60 rounded-md border"><strong>2.</strong> Egemenliğin kaynağını hangi madde belirtir?</div>
-            <div class="p-3 bg-white/60 rounded-md border"><strong>3.</strong> "Yasama yetkisi devredilemez" ifadesi hangi maddededir?</div>
-            <div class="p-3 bg-white/60 rounded-md border"><strong>4.</strong> "Pozitif ayrımcılık" kavramı hangi maddenin yorumudur?</div>
-            <div class="p-3 bg-white/60 rounded-md border"><strong>5.</strong> Anayasa Mahkemesi, iptal ettiği bir kanunu kaç gün sonra hükümsüz ilan eder?</div>
+    <!-- HIZLI TEKRAR TESTİ - TAMAMIYLA GÜNCELLENDİ (Sınav Odaklı Format) -->
+<div class="mt-8 p-6 bg-sky-50 border-t-4 border-sky-500 rounded-lg" role="region">
+    <h3 class="font-bold text-sky-900 text-xl mb-4 flex items-center">
+        <svg class="h-6 w-6 mr-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+        Hızlı Tekrar Testi
+    </h3>
+    <div class="space-y-4 text-sky-800">
+        <div class="p-3 bg-white/60 rounded-md border">
+            <strong>1. Soru (Boşluk Doldurma):</strong> Egemenlik, kayıtsız şartsız <u>......................</u> .
         </div>
-        <details class="mt-4">
-            <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevapları Göster</summary>
-            <div class="mt-2 p-3 bg-white rounded-md border text-sm space-y-1">
-                <p><strong>1.</strong> Madde 5</p>
-                <p><strong>2.</strong> Madde 6</p>
-                <p><strong>3.</strong> Madde 7</p>
-                <p><strong>4.</strong> Madde 10</p>
-                <p><strong>5.</strong> 30 gün sonra</p>
-            </div>
-        </details>
+        <div class="p-3 bg-white/60 rounded-md border">
+            <strong>2. Soru (Doğru/Yanlış):</strong> Anayasanın 1, 2 ve 3. maddeleri, "değiştirilemez" olmakla birlikte, kanun teklifi olarak tartışılmaya açılabilir. (<strong>D / Y</strong>)
+        </div>
+        <div class="p-3 bg-white/60 rounded-md border">
+            <strong>3. Soru (Çoktan Seçmeli):</strong> Aşağıdakilerden hangisi Devletin temel amaç ve görevlerinden biri <strong>değildir</strong>?<br>
+            a) Cumhuriyeti ve demokrasiyi korumak<br>
+            b) Siyasal, ekonomik ve sosyal engelleri kaldırmaya çalışmak<br>
+            c) Atatürk milliyetçiliğine bağlı bir toplum düzeni kurmak<br>
+            d) İnsanın maddi ve manevi gelişmesi için gerekli şartları hazırlamaya çalışmak
+        </div>
+        <div class="p-3 bg-white/60 rounded-md border">
+            <strong>4. Soru (Çoktan Seçmeli):</strong> Aşağıdakilerden hangisi, Anayasa Mahkemesi tarafından iptal edilen bir kanunun hükümsüzlük tarihidir?<br>
+            a) İptal kararının alındığı gün<br>
+            b) Kararın TBMM'ye iletildiği gün<br>
+            c) Kararın Resmî Gazete'de yayımlanmasından 30 gün sonra<br>
+            d) Cumhurbaşkanının kararla ilgili açıklama yaptığı gün
+        </div>
+        <div class="p-3 bg-white/60 rounded-md border">
+            <strong>5. Soru (Karıştırmayın):</strong> "Yasama yetkisinin devredilemez olması" ile "Yürütme yetkisinin Anayasaya uygun olması" arasındaki temel fark nedir?
+        </div>
     </div>
+    <details class="mt-4">
+        <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
+        <div class="mt-2 p-3 bg-white rounded-md border text-sm space-y-2">
+            <p><strong>1. Cevap:</strong> Milletindir</p>
+            <p><strong>2. Cevap:</strong> <strong>Yanlış.</strong> Madde 4’e göre bu maddelerin değiştirilmesi <strong>teklif dahi edilemez</strong>. Tartışmaya bile açılamaz.</p>
+            <p><strong>3. Cevap:</strong> <strong>c)</strong> Atatürk milliyetçiliğine bağlı bir toplum düzeni <strong>kurmak</strong>, devletin görevi değil, <strong>niteliğidir</strong>. Madde 2’de yer alır ama Madde 5’teki "görev" listesinde yoktur.</p>
+            <p><strong>4. Cevap:</strong> <strong>c)</strong> Kararın Resmî Gazete'de yayımlanmasından 30 gün sonra. (Madde 11)</p>
+            <p><strong>5. Cevap:</strong> 
+                <strong>Yasama yetkisinin devredilemezliği</strong> (Madde 7), TBMM'nin bu yetkiyi başka bir organa (hükümete, cumhurbaşkanına) devretemeyeceğini ifade eder. 
+                <strong>Yürütmenin Anayasaya uygun olması</strong> (Madde 8), yürütmenin fiillerinin Anayasa ve kanunlarla çelişemeyeceğini, yani <strong>alt sınırlarını</strong> belirtir. Birisi "yetki devri", diğeri "hukuka uygunluk" ilkesidir.
+            </p>
+        </div>
+    </details>
+</div>
 </section>
             </article>
         </div>
