--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>T.C. Anayasası Konu Anlatımı - Adalet GYS Portalı</title>
     <meta name="description" content="Adalet Bakanlığı Görevde Yükselme Sınavı (GYS) için T.C. Anayasası ders notları. Genel Esaslar, Temel Haklar ve Devletin Organları konularını kapsayan profesyonel ve sınav odaklı konu anlatımı.">
-    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- ✅ Sadece projenin kendi CSS dosyaları kullanılıyor -->
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/konu-anlatim.css">
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
-    <!-- A11y: Ekran okuyucular için betiklerin erişilebilir olması önemli -->
+
+    <!-- Erişilebilirlik için küçük ek -->
     <style>
-        /* Erişilebilirlik iyileştirmesi: focus-visible */
         *:focus {
             outline: 2px solid #0d9488;
             outline-offset: 2px;
@@ -21,7 +22,7 @@
 <body data-needs-template="page" class="leading-relaxed bg-white text-slate-800">
     <main class="container page-content max-w-4xl mx-auto px-4 py-8">
         <div class="card p-8 md:p-12 bg-white rounded-xl shadow-lg border border-slate-200">
-            <article class="konu-icerik" role="article">
+            <article class="konu-icerik">
                 <div class="text-center mb-10 pb-6 border-b border-slate-200">
                     <h1 class="text-4xl md:text-5xl font-extrabold text-slate-800">T.C. Anayasası</h1>
                     <p class="mt-4 text-lg text-slate-500">Görevde Yükselme Sınavı Odaklı Konu Anlatımı ve Stratejiler</p>
