--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -6,14 +6,14 @@
     <title>T.C. Anayasası Konu Anlatımı - Adalet GYS Portalı</title>
     <meta name="description" content="Adalet Bakanlığı Görevde Yükselme Sınavı (GYS) için T.C. Anayasası ders notları. Genel Esaslar, Temel Haklar ve Devletin Organları konularını kapsayan profesyonel ve sınav odaklı konu anlatımı.">
 
-    <!-- ✅ Sadece projenin kendi CSS dosyaları kullanılıyor -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/konu-anlatim.css">
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 
-    <!-- Erişilebilirlik için küçük ek -->
     <style>
-        *:focus {
+        *:focus-visible {
             outline: 2px solid #0d9488;
             outline-offset: 2px;
         }
@@ -22,13 +22,12 @@
 <body data-needs-template="page" class="leading-relaxed bg-white text-slate-800">
     <main class="container page-content max-w-4xl mx-auto px-4 py-8">
         <div class="card p-8 md:p-12 bg-white rounded-xl shadow-lg border border-slate-200">
-            <article class="konu-icerik">
+            <article class="konu-icerik" role="article">
                 <div class="text-center mb-10 pb-6 border-b border-slate-200">
                     <h1 class="text-4xl md:text-5xl font-extrabold text-slate-800">T.C. Anayasası</h1>
                     <p class="mt-4 text-lg text-slate-500">Görevde Yükselme Sınavı Odaklı Konu Anlatımı ve Stratejiler</p>
                 </div>
 
-                <!-- Anayasa Test Merkezi -->
                 <aside class="my-8 p-6 rounded-lg bg-gradient-to-r from-slate-50 to-slate-100 border-l-4 border-teal-500 shadow-md" role="region" aria-label="Test Merkezi">
                     <div class="flex items-center">
                         <div class="flex-shrink-0">
@@ -40,13 +39,12 @@
                             <h3 class="font-bold text-slate-800 text-lg">Anayasa Test Merkezi</h3>
                             <p class="text-slate-600">Konu anlatımına başlamadan veya sonra, özel testlerle pratik yapın ve bilgilerinizi kalıcı hale getirin.</p>
                         </div>
-                        <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/testler/anayasa/" class="ml-4 flex-shrink-0 px-4 py-2 bg-white text-teal-600 font-semibold rounded-lg shadow-sm border border-teal-200 hover:bg-teal-50 transition-colors focus:outline-none focus:ring-2 focus:ring-teal-300" aria-label="Anayasa testlerine göz at">
+                        <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/testler/anayasa/" class="ml-4 flex-shrink-0 px-4 py-2 bg-white text-teal-600 font-semibold rounded-lg shadow-sm border border-teal-200 hover:bg-teal-50 transition-colors" aria-label="Anayasa testlerine göz at">
                             Testlere Göz At
                         </a>
                     </div>
                 </aside>
 
-                <!-- Giriş Uyarısı -->
                 <section class="ozet-kutusu my-6 p-5 bg-slate-50 rounded-lg border-l-4 border-teal-500" role="note" aria-label="Öğrenciye Mesaj">
                     <div class="flex items-start">
                         <div class="flex-shrink-0 pt-1">
@@ -57,7 +55,7 @@
                         <div class="ml-4">
                             <p>
                                 <strong>Değerli Aday,</strong><br>
-                                Anayasa Hukuku, Görevde Yükselme Sınavı'nın hem en önemli hem de en çok çekinilen konularından biridir. Bu rehberde, Anayasa'nın karmaşık metnini, modern öğrenme teknikleriyle ayrıştırarak sınavda doğrudan puan getirecek, stratejik ve net bilgilere dönüştürüyoruz. Amacımız, sizi bir hukukçu gibi değil, bir sınav uzmanı gibi düşünmeye hazırlamaktır. Ezberi bir kenara bırakın, anlamaya ve kalıcı öğrenmeye odaklanın.
+                                Anayasa Hukuku, Görevde Yükselme Sınavı'nın hem en önemli hem de en çok çekinilen konularından biridir. Bu rehberde, Anayasa'nın karmaşık metnini, modern öğrenme teknikleriyle ayrıştırarak sınavda doğrudan puan getirecek, stratejik ve net bilgilere dönüştürüyoruz.
                             </p>
                         </div>
                     </div>
