--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -49,7 +49,7 @@
                             </svg>
                         </div>
                         <div class="ml-4">
-                            <p>
+                            <p style="text-align: justify;">
                                 <strong>Değerli Aday,</strong><br>
                                 Anayasa Hukuku, Görevde Yükselme Sınavı'nın hem en önemli hem de en çok çekinilen konularından biridir. Bu rehberde, Anayasa'nın karmaşık metnini, modern öğrenme teknikleriyle ayrıştırarak sınavda doğrudan puan getirecek, stratejik ve net bilgilere dönüştürüyoruz. Amacımız, sizi bir hukukçu gibi değil, bir sınav uzmanı gibi düşünmeye hazırlamaktır. Ezberi bir kenara bırakın, anlamaya ve kalıcı öğrenmeye odaklanın.
                             </p>
@@ -57,11 +57,10 @@
                     </div>
                 </div>
 
-                <h2 id="genel-esaslar">BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)</h2>
-                
-                <section aria-labelledby="bolum1-4">
-                    <h3 id="bolum1-4">Madde 1-4: Devletin "Çekirdek Ailesi" - Değiştirilemez Hükümler</h3>
-    </h2>
+                <section aria-labelledby="genel-esaslar">
+                    <h2 id="genel-esaslar" class="text-3xl font-bold text-slate-800 mt-16 mb-6 border-b pb-4">
+                        BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)
+                    </h2>
    <section aria-labelledby="bolum1-4">
     <h3 id="bolum1-4" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">Madde 1-4: Devletin "Çekirdek Ailesi" - Değiştirilemez Hükümler</h3>
     <p class="text-slate-600 mb-6" style="text-align: justify;">
