--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -55,9 +55,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
-
-                <section aria-labelledby="genel-esaslar">
+                </div> <section aria-labelledby="genel-esaslar">
                     <h2 id="genel-esaslar" class="text-3xl font-bold text-slate-800 mt-16 mb-6 border-b pb-4">
                         BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)
                     </h2>
